# libpeyton

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.cvs  acinclude.m4  arlib  configure  configure.in  cvs-post-checkout.sh  git-untracked-files  git-version-gen  libpeyton.kdevelop  mkinstalldirs  peyton.kdev4  peyton_config.h.in
.kdev4/: peyton.kdev4
include/: Makefile.am
include/astro/: assert.h  constants.h  coordinates.h  exceptions.h  image.h  macros.h  math.h  time.h  types.h  useall.h  util.h  version.h
include/astro/asteroids/: asteroid.h
include/astro/image/: indexers.h  map.h
include/astro/io/: binarystream.h  fits.h  format.h  fpnumber.h  iostate_base.h  magick.h
include/astro/io/bits/: auto_ptr.h
include/astro/io/gzstream/: compat.h  file.h  fstream.h  streambuf.h
include/astro/io/gzstream/config/: config.gcc3.h
include/astro/math/: stats.h  vector.h
include/astro/net/: remoteinstance.h
include/astro/sdss/: photometry.h  rungeometry.h
include/astro/system/: config.h  fs.h  getopt.h  log.h  memorymap.h  options.h  preferences.h
include/astro/ui/: term.h  ticker.h
include/astro/util/: ranges.h  varexpand.h
src/: Coordinates.cpp  Exceptions.cpp  Makefile.am  Util.cpp  Version.cpp  demo_diskmemorymodel.cpp  libpeytondemo.cpp
src/asteroids/: Catalog.cpp  Makefile.am
src/asteroids/catalogs/: BowellCatalog.cpp  BowellCatalog.h  MPCCatalog.cpp  MPCCatalog.h  Makefile.am  MemoryCatalog.cpp  MemoryCatalog.h  NativeCatalog.cpp
src/image/: Makefile.am  Map.cpp
src/io/: BinaryStream.cpp  Compress.cpp  FITS.cpp  Format.cpp  Makefile.am  fpnumber.cpp
src/net/: Makefile.am  RemoteInstance.cpp
src/sdss/: Makefile.am  Photometry.cpp  RunGeometry.cpp
src/system/: Config.cpp  Dir.cpp  DiskMemoryModel.cpp  FS.cpp  Log.cpp  Makefile.am  MemoryMap.cpp  Options.cpp  Preferences.cpp  Shell.cpp
src/ui/: Makefile.am  ticker.cpp
